[package]
name = "gowpi"
version = "0.1.0"
authors = ["flavio.neevs <flavio.neevs@gmail.com>"]
edition = "2021"
keywords = ["api", "dynamic-api"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/flavionevs/gowpi"
# description = ""


[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
