[package]
name = "gowpi"
version = "0.1.0"
authors = ["flavio.neevs <flavio.neevs@gmail.com>"]
edition = "2021"
keywords = ["api", "dynamic-api"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/flavionevs/gowpi"
# description = ""

[workspace]
members = [
    "gowpi-api"
]


[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
gowpi-api = { path = "./gowpi-api" }