[package]
name = "gowpi-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
route-recognizer = "0.2"
async-trait = "0.1"
serde_json = "1.0.95"
futures = { version = "0.3.6", default-features = false, features = ["async-await"] }
serde = { version = "1.0", features = ["derive"] }
hyper = "0.13"
bytes = "0.5"
